RESOLVED FIXED182060
Linker error in ShareableBitmapCairo.cpp undefined reference to WebCore::Cairo::ShadowState::ShadowState
https://bugs.webkit.org/show_bug.cgi?id=182060
Summary Linker error in ShareableBitmapCairo.cpp undefined reference to WebCore::Cai...
Christopher Reid
Reported 2018-01-24 13:25:31 PST
I'm seeing an undefined reference to the Cairo::ShadowState constructor in WebKit's ShareableBitmapCairo.cpp. It looks like this is only happening when WebCore is linked dynamically. Source\WebKit\Shared\cairo\ShareableBitmapCairo.cpp : error : reference to undefined symbol `WebCore::Cairo::ShadowState::ShadowState(WebCore::GraphicsContextState const&)`
Attachments
patch (1.32 KB, patch)
2018-01-24 13:42 PST, Christopher Reid
no flags
Christopher Reid
Comment 1 2018-01-24 13:42:26 PST
WebKit Commit Bot
Comment 2 2018-01-24 23:15:01 PST
Comment on attachment 332191 [details] patch Clearing flags on attachment: 332191 Committed r227593: <https://trac.webkit.org/changeset/227593>
WebKit Commit Bot
Comment 3 2018-01-24 23:15:02 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-01-24 23:16:30 PST
Note You need to log in before you can comment on or make changes to this bug.