Linker error in ShareableBitmapCairo.cpp  undefined reference to WebCore::Cairo::ShadowState::ShadowState https://bugs.webkit.org/show_bug.cgi?id=182060

Patch by Christopher Reid <chris.reid@sony.com> on 2018-01-24
Reviewed by Žan Doberšek.

No new tests, no change in behavior.

Added exports to WebCore::Cairo::ShadowState::ShadowState.

* platform/graphics/cairo/CairoOperations.h:

Canonical link: https://commits.webkit.org/197928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227593 268f45cc-cd09-0410-ab3c-d52691b4dbfc